--- a/front/src/style/index.css
+++ b/front/src/style/index.css
@@ -70,7 +70,7 @@ body {
 }
 
 main {
-	margin-top: calc(var(--navbar-size) + 30px);
+	margin-top: var(--navbar-size);
 }
 
 footer {
